--- a/AndroidApp/choresMonger/res/layout/create_new_reward.xml
+++ b/AndroidApp/choresMonger/res/layout/create_new_reward.xml
@@ -49,7 +49,7 @@
 	android:layout_height="wrap_content">
 	
 <TextView android:id="@+id/txviewRewardTitle"
-			android:textColor="#FFF"
+			android:textColor="#000"
 			android:text="Title:"
 			android:textSize="10pt"
 			android:layout_height="wrap_content"
@@ -60,7 +60,7 @@
 	android:layout_height="wrap_content">
 	
 <EditText android:id="@+id/txviewRewardTitleVal"
-			android:textColor="#FFF"
+			android:textColor="#000"
 			android:textSize="10pt"
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"	/>	
@@ -72,7 +72,7 @@
 	android:layout_height="wrap_content">
 	
 <TextView android:id="@+id/txviewRewardDescr"
-			android:textColor="#FFF"
+			android:textColor="#000"
 			android:text="Description:"
 			android:textSize="10pt"
 			android:layout_height="wrap_content"
@@ -84,7 +84,7 @@
 	android:layout_height="wrap_content">	
 	
 <EditText android:id="@+id/editxtRewardDescrVal"
-			android:textColor="#FFF"
+			android:textColor="#000"
 			android:textSize="10pt"
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"	/>	
@@ -95,7 +95,7 @@
 	android:layout_height="wrap_content">
 	
 <TextView android:id="@+id/txviewRewardPoints"
-			android:textColor="#FFF"
+			android:textColor="#000"
 			android:text="Points:"
 			android:textSize="10pt"
 			android:layout_height="wrap_content"
@@ -108,7 +108,7 @@
 	android:layout_height="wrap_content">
 
 <EditText android:id="@+id/txviewRewardPointsVal"
-			android:textColor="#FFF"
+			android:textColor="#000"
 			android:textSize="10pt"
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"	/>	
