--- a/AndroidApp/choresMonger/res/layout/main_menu.xml
+++ b/AndroidApp/choresMonger/res/layout/main_menu.xml
@@ -3,6 +3,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
+  android:orientation="vertical"
   android:background="#4062F7">
   
     <TableLayout android:id="@+id/TableLayout01" 
@@ -41,8 +42,16 @@
 	android:layout_height="wrap_content"
 	android:background="#eee">
 	
+	
+		<TextView
+    android:id="@+id/TextView_WelcomeView"
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:textSize="8pt"
+    android:text="Welcome    "
+    android:textColor="#00331A"/>
 	<TextView
-    android:id="@+id/TextView_DisplayName"
+    android:id="@+id/TextView_DisplayNameVal"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:textSize="8pt"
@@ -66,6 +75,27 @@
   
   	<TextView
     	android:id="@+id/TextView_assignedChoresVal"
+    	android:layout_height="wrap_content"
+    	android:layout_width="wrap_content"
+    	android:textSize="8pt"
+    	android:textColor="#00331A"/>
+    	</TableRow>
+ 	<TableRow android:layout_width="fill_parent" 
+		android:layout_height="wrap_content"
+		android:background="#eee"
+		android:paddingTop="5px"
+		android:paddingBottom="5px">
+		
+   	<TextView
+    	android:id="@+id/TextView_usrEarnedPoints"
+    	android:layout_height="wrap_content"
+    	android:layout_width="wrap_content"
+    	android:textColor="#00331A"
+    	android:textSize="8pt"
+    	android:text="Earned Points: "/>
+  
+  	<TextView
+    	android:id="@+id/TextView_usrEarnedPointsVal"
     	android:layout_height="wrap_content"
     	android:layout_width="wrap_content"
     	android:textSize="8pt"
@@ -103,7 +133,7 @@
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="User Management"></Button>
-            <Button
+       <Button
          android:id="@+id/Button_RewardsCenter"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
