--- a/AndroidApp/choresMonger/res/layout/accept_invitation.xml
+++ b/AndroidApp/choresMonger/res/layout/accept_invitation.xml
@@ -5,16 +5,16 @@
   android:layout_height="fill_parent">
   
   
-  <TableLayout android:id="@+id/TableLayout01" 
+  <TableLayout
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content"
 	android:stretchColumns="*">
 	
-	<TableRow android:id="@+id/TableRow01"
+	<TableRow 
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">
 	
-    <ImageView android:id="@+id/ImageViewLogo" 
+    <ImageView
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content"
 	android:src="@drawable/choresmonger"
@@ -22,7 +22,6 @@
     android:layout_alignParentTop="true">
 	</ImageView>
 	        <TextView
-            android:id="@+id/TextView01"
             android:layout_height="wrap_content"
             android:text="Accept Invitation"
             android:textSize="8pt"
