--- a/AndroidApp/choresMonger/res/layout/add_new_family_member.xml
+++ b/AndroidApp/choresMonger/res/layout/add_new_family_member.xml
@@ -4,16 +4,16 @@
   android:layout_width="fill_parent"
   android:layout_height="fill_parent">
   
-  <TableLayout android:id="@+id/TableLayout01" 
+  <TableLayout
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content"
 	android:stretchColumns="*">
 	
-	<TableRow android:id="@+id/TableRow01"
+	<TableRow 
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">
 	
-    <ImageView android:id="@+id/ImageViewLogo" 
+    <ImageView 
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content"
 	android:src="@drawable/choresmonger"
@@ -21,7 +21,6 @@
     android:layout_alignParentTop="true">
 	</ImageView>
 	        <TextView
-            android:id="@+id/TextView01"
             android:layout_height="wrap_content"
             android:text="Add a new family member"
             android:textSize="8pt"
