--- a/AndroidApp/choresMonger/res/layout/create_new_reward.xml
+++ b/AndroidApp/choresMonger/res/layout/create_new_reward.xml
@@ -4,16 +4,16 @@
   android:layout_width="fill_parent"
   android:layout_height="fill_parent">
 
-<TableLayout android:id="@+id/TableLayout01" 
+<TableLayout 
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content"
 	android:stretchColumns="*">
 	
-	<TableRow android:id="@+id/TableRow01"
+	<TableRow
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">
 	
-	<ImageView android:id="@+id/ImageView_LeftIcon" 
+	<ImageView
 		android:layout_width="wrap_content" 
 		android:layout_height="wrap_content"
 		android:layout_alignParentLeft="true"
@@ -23,12 +23,11 @@
 	
 </TableRow>
 
-	<TableRow android:id="@+id/TableRow02"
+	<TableRow
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">
 
 <TextView 
-		android:id="@+id/TextView01" 
 		android:layout_height="wrap_content" 
 		android:text="Create Reward"
 		android:textSize="@dimen/menu_title" 
@@ -44,18 +43,18 @@
 
 </TableRow>
 
-	<TableRow android:id="@+id/TableRow03"
+	<TableRow
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">
 	
-<TextView android:id="@+id/txviewRewardTitle"
+<TextView
 			android:textColor="#000"
 			android:text="Title:"
 			android:textSize="10pt"
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"	/>	
 </TableRow>
-	<TableRow android:id="@+id/TableRow04"
+	<TableRow
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">
 	
@@ -67,11 +66,11 @@
 	
 </TableRow>
 
-	<TableRow android:id="@+id/TableRow05"
+	<TableRow
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">
 	
-<TextView android:id="@+id/txviewRewardDescr"
+<TextView
 			android:textColor="#000"
 			android:text="Description:"
 			android:textSize="10pt"
@@ -79,7 +78,7 @@
 			android:layout_width="wrap_content"	/>	
 </TableRow>
 
-	<TableRow android:id="@+id/TableRow06"
+	<TableRow
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">	
 	
@@ -90,11 +89,11 @@
 			android:layout_width="wrap_content"	/>	
 </TableRow>
   
-  <TableRow android:id="@+id/TableRow07"
+  <TableRow
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">
 	
-<TextView android:id="@+id/txviewRewardPoints"
+<TextView
 			android:textColor="#000"
 			android:text="Points:"
 			android:textSize="10pt"
@@ -103,7 +102,7 @@
 
 </TableRow>
 
-<TableRow android:id="@+id/TableRow08"
+<TableRow
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">
 
@@ -114,7 +113,7 @@
 			android:layout_width="wrap_content"	/>	
 </TableRow>
    
-   <TableRow android:id="@+id/TableRow06"
+   <TableRow
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">
 	 
@@ -123,7 +122,7 @@
         android:layout_height="wrap_content"
         android:text="One Time Reward" />
         </TableRow>
-           <TableRow android:id="@+id/TableRow07"
+           <TableRow 
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content">
    <Button
