--- a/AndroidApp/choresMonger/res/layout/edit_reward.xml
+++ b/AndroidApp/choresMonger/res/layout/edit_reward.xml
@@ -3,59 +3,55 @@
 <ScrollView
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="fill_parent"
-android:layout_height="wrap_content">
+android:layout_height="wrap_content"
+  android:background="#4062F7">
  
- <TableLayout android:id="@+id/TableLayout01" 
+ <TableLayout
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">
-	
-	<TableRow android:id="@+id/TableRow01"
+<TableRow 
 	android:layout_width="fill_parent" 
-	android:layout_height="wrap_content">
-	
-	<ImageView android:id="@+id/ImageView_LeftIcon" 
-		android:layout_width="wrap_content" 
-		android:layout_height="wrap_content"
-		android:layout_alignParentLeft="true"
-		android:layout_alignParentTop="true"
-		android:src="@drawable/choresmonger">
-	</ImageView>
-	
-</TableRow>
-
-	<TableRow android:id="@+id/TableRow02"
-	android:layout_width="fill_parent" 
-	android:layout_height="wrap_content">
-
+	android:layout_height="wrap_content"
+	android:background="#000">
 <TextView 
-		android:id="@+id/TextView01" 
 		android:layout_height="wrap_content" 
-		android:text="Edit Reward"
+		android:text="Edit Reward" 
 		android:textSize="@dimen/menu_title" 
 		android:shadowDx="0" 
 		android:shadowDy="0" 
 		android:shadowRadius="10" 
-		android:layout_width="wrap_content"
+		android:layout_width="fill_parent"
 		android:layout_gravity="fill_horizontal|center" 
 		android:layout_alignParentTop="true" 
-		android:layout_centerHorizontal="true" 
+		android:layout_centerHorizontal="true"
 		android:shadowColor="@color/menu_glow" 
 		android:textColor="@color/menu_header"/>
 
+	 <ImageView
+	android:layout_width="wrap_content" 
+	android:layout_height="wrap_content"
+	android:src="@drawable/choresmonger"
+	android:layout_alignParentLeft="true"
+    android:layout_alignParentTop="true">
+	</ImageView>
+
 </TableRow>
 
-	<TableRow android:id="@+id/TableRow03"
+	
+	
+
+	<TableRow
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">
 	
-<TextView android:id="@+id/txviewRewardTitle"
+<TextView
 			android:textColor="#FFF"
 			android:text="Title:"
 			android:textSize="10pt"
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"	/>	
 </TableRow>
-	<TableRow android:id="@+id/TableRow04"
+	<TableRow
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">
 	
@@ -68,7 +64,7 @@ android:layout_height="wrap_content">
 	
 </TableRow>
 
-	<TableRow android:id="@+id/TableRow05"
+	<TableRow 
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">
 	
@@ -80,7 +76,7 @@ android:layout_height="wrap_content">
 			android:layout_width="wrap_content"	/>	
 </TableRow>
 
-	<TableRow android:id="@+id/TableRow06"
+	<TableRow
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">	
 	
@@ -104,7 +100,7 @@ android:layout_height="wrap_content">
 			android:layout_width="wrap_content"	/>	
 
 </TableRow>
-<TableRow android:id="@+id/TableRow08"
+<TableRow
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content">
 
@@ -115,7 +111,7 @@ android:layout_height="wrap_content">
 			android:layout_height="wrap_content"
 			android:layout_width="fill_parent"	/>	
 </TableRow>
-      <TableRow android:id="@+id/TableRow09"
+      <TableRow
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">
 	
@@ -126,7 +122,7 @@ android:layout_height="wrap_content">
 	
 	</TableRow>
    
-   <TableRow android:id="@+id/TableRow10"
+   <TableRow
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content">
 	
