--- a/AndroidApp/choresMonger/res/layout/lost_password.xml
+++ b/AndroidApp/choresMonger/res/layout/lost_password.xml
@@ -4,16 +4,16 @@
   android:layout_width="fill_parent"
   android:layout_height="fill_parent">
   
-  <TableLayout android:id="@+id/TableLayout01" 
+  <TableLayout 
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content"
 	android:stretchColumns="*">
 	
-	<TableRow android:id="@+id/TableRow01"
+	<TableRow
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">
 	
-    <ImageView android:id="@+id/ImageViewLogo" 
+    <ImageView 
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content"
 	android:src="@drawable/choresmonger"
@@ -21,7 +21,6 @@
     android:layout_alignParentTop="true">
 	</ImageView>
 	        <TextView
-            android:id="@+id/TextView01"
             android:layout_height="wrap_content"
             android:text="Lost Password Retrieval"
             android:textSize="8pt"
@@ -40,9 +39,7 @@
                     android:textSize="7pt"
                     android:textStyle="bold"
                     android:gravity="center"
-                    android:hint="Please enter the email address you used to register for your account and we'll send you your password in your email."
-                    android:id="@+id/TextView_DOB_Info">
-                    </TextView>
+                    android:hint="Please enter the email address you used to register for your account and we'll send you your password in your email."/>
                     
   <EditText
   	android:id="@+id/EditText_EmailAddressLostPW"
