--- a/AndroidApp/choresMonger/res/layout/main_menu.xml
+++ b/AndroidApp/choresMonger/res/layout/main_menu.xml
@@ -6,16 +6,16 @@
   android:orientation="vertical"
   android:background="#4062F7">
   
-    <TableLayout android:id="@+id/TableLayout01" 
+    <TableLayout
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content"
 	android:stretchColumns="*">
 	
-	<TableRow android:id="@+id/TableRow01"
+	<TableRow
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">
 	
-	 <ImageView android:id="@+id/ImageViewLogo" 
+	 <ImageView
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content"
 	android:src="@drawable/choresmonger"
@@ -23,7 +23,6 @@
     android:layout_alignParentTop="true">
 	</ImageView>
 	        <TextView
-            android:id="@+id/TextView01"
             android:layout_height="wrap_content"
             android:text="Chore Monger"
             android:textSize="8pt"
@@ -37,18 +36,17 @@
             android:textColor="#FFF"/>
   	</TableRow>
   
-  	<TableRow android:id="@+id/TableRow02"
+  	<TableRow
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content"
 	android:background="#eee">
 	
 	
-		<TextView
-    android:id="@+id/TextView_WelcomeView"
+<TextView
+	android:id="@+id/TextView_greeting"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:textSize="8pt"
-    android:text="Welcome    "
     android:textColor="#00331A"/>
 	<TextView
     android:id="@+id/TextView_DisplayNameVal"
@@ -58,7 +56,7 @@
     android:textColor="#00331A"/>
 	
 	</TableRow>
-	  	<TableRow android:id="@+id/TableRow03"
+<TableRow 
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content"
 	android:background="#eee"
@@ -66,7 +64,6 @@
 	android:paddingBottom="5px">
 		
 	<TextView
-    	android:id="@+id/TextView_assignedChores"
     	android:layout_height="wrap_content"
     	android:layout_width="wrap_content"
     	android:textColor="#00331A"
@@ -87,7 +84,6 @@
 		android:paddingBottom="5px">
 		
    	<TextView
-    	android:id="@+id/TextView_usrEarnedPoints"
     	android:layout_height="wrap_content"
     	android:layout_width="wrap_content"
     	android:textColor="#00331A"
@@ -102,7 +98,7 @@
     	android:textColor="#00331A"/>
     </TableRow>
 
-	<TableRow android:id="@+id/TableRow02"
+	<TableRow 
 		android:layout_width="fill_parent" 
 		android:layout_height="wrap_content"
 		android:background="#1A0019"
@@ -121,7 +117,7 @@
          android:text="Chores Management"></Button>
          
 	</TableRow>
-		<TableRow android:id="@+id/TableRow03"
+		<TableRow
 		android:layout_width="fill_parent" 
 		android:layout_height="wrap_content"
 		android:background="#1A0019"
@@ -141,7 +137,7 @@
 	
 	</TableRow>
 	
-			<TableRow android:id="@+id/TableRow04"
+			<TableRow 
 		android:layout_width="fill_parent" 
 		android:layout_height="wrap_content"
 		android:background="#1A0019"
