--- a/AndroidApp/choresMonger/res/layout/my_rewards.xml
+++ b/AndroidApp/choresMonger/res/layout/my_rewards.xml
@@ -7,12 +7,11 @@
     android:background="#4062F7">
 
 <RelativeLayout 
-	android:id="@+id/RelativeLayout01" 
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content"
 	android:background="#000">
 	
-<ImageView android:id="@+id/ImageView_LeftIcon" 
+<ImageView 
 		android:layout_width="wrap_content" 
 		android:layout_height="wrap_content"
 		android:layout_alignParentRight="true"
@@ -21,7 +20,7 @@
 		android:src="@drawable/choresmonger">
 	</ImageView>
 <TextView 
-		android:id="@+id/TextView01" 
+
 		android:layout_height="wrap_content" 
 		android:text="My Rewards" 
 		android:textSize="@dimen/menu_title" 
@@ -36,9 +35,7 @@
 		android:textColor="@color/menu_header"/>
 </RelativeLayout>
 
-
    <RelativeLayout
-        android:id="@+id/RelativeLayout02"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content">
         
