--- a/AndroidApp/choresMonger/res/layout/sign_up_family.xml
+++ b/AndroidApp/choresMonger/res/layout/sign_up_family.xml
@@ -6,16 +6,16 @@
     android:layout_height="fill_parent"
     android:background="#4062F7">
     
-   <TableLayout android:id="@+id/TableLayout01" 
+   <TableLayout 
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content"
 	android:stretchColumns="*">
 	
-	<TableRow android:id="@+id/TableRow01" 
+	<TableRow
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content">
 	
-    <ImageView android:id="@+id/ImageViewLogo" 
+    <ImageView 
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content"
 	android:src="@drawable/choresmonger"
@@ -24,7 +24,6 @@
 	</ImageView>
 
         <TextView
-            android:id="@+id/TextView01"
             android:layout_height="wrap_content"
             android:text="Sign Up Family"
             android:textSize="8pt"
@@ -40,7 +39,6 @@
 </TableLayout>
     
     <ScrollView
-        android:id="@+id/ScrollView01"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:isScrollContainer="true"
@@ -99,8 +97,7 @@
   android:hint="Email">
  </EditText>
 
-            <LinearLayout
-                android:id="@+id/LinearLayout01"
+ <LinearLayout
                 android:orientation="horizontal"
                 android:layout_height="wrap_content"
                 android:layout_width="fill_parent">
