--- a/AndroidApp/choresMonger/res/layout/welcome.xml
+++ b/AndroidApp/choresMonger/res/layout/welcome.xml
@@ -11,23 +11,23 @@
     android:text="@string/app_title"
     android:textSize="@dimen/menu_title" 
     />
-    <TableLayout android:id="@+id/TableLayout01" 
+    <TableLayout 
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content"
 	android:stretchColumns="*">
 	
 	
-<TableRow android:id="@+id/TableRow01" 
+<TableRow 
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content">
 	
-    <ImageView android:id="@+id/ImageViewLogo" 
+    <ImageView
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content"
 	android:src="@drawable/choresmongermain">
 	</ImageView>
 </TableRow>
-<TableRow android:id="@+id/TableRow02" 
+<TableRow  
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content">
 	
@@ -39,7 +39,7 @@
         android:textColor="#000"/>
 	</TableRow>
 	
-	<TableRow android:id="@+id/TableRow03" 
+	<TableRow 
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content">
 	
@@ -52,7 +52,7 @@
         
 	</TableRow>
 	
-	<TableRow android:id="@+id/TableRow04" 
+	<TableRow
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content">
 	
