--- a/AndroidApp/choresMonger/res/menu/options_menu.xml
+++ b/AndroidApp/choresMonger/res/menu/options_menu.xml
@@ -3,5 +3,5 @@
     <item android:id="@+id/logout"
           android:title="Logout" />
     <item android:id="@+id/help"
-          android:title="Helpbtn" />
+          android:title="Help" />
 </menu>
