--- a/AndroidApp/choresMonger/res/layout/edit_reward.xml
+++ b/AndroidApp/choresMonger/res/layout/edit_reward.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <ScrollView
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="fill_parent"
-android:layout_height="wrap_content"
+android:layout_height="fill_parent"
   android:background="#4062F7">
  
  <TableLayout
 	android:layout_width="fill_parent" 
-	android:layout_height="wrap_content">
+	android:layout_height="wrap_content"
+	android:stretchColumns="0">
 <TableRow 
-	android:layout_width="fill_parent" 
+	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content"
 	android:background="#000">
 <TextView 
@@ -20,7 +20,7 @@ android:layout_height="wrap_content"
 		android:shadowDx="0" 
 		android:shadowDy="0" 
 		android:shadowRadius="10" 
-		android:layout_width="fill_parent"
+		android:layout_width="wrap_content"
 		android:layout_gravity="fill_horizontal|center" 
 		android:layout_alignParentTop="true" 
 		android:layout_centerHorizontal="true"
@@ -36,9 +36,6 @@ android:layout_height="wrap_content"
 	</ImageView>
 
 </TableRow>
-
-	
-	
 
 	<TableRow
 	android:layout_width="fill_parent" 
@@ -58,7 +55,7 @@ android:layout_height="wrap_content"
 <EditText android:id="@+id/editTxtRewardTitleVal"
 			android:textColor="#000"
 			android:textSize="10pt"
-			android:layout_span="3"
+			android:layout_span="2"
 			android:layout_height="wrap_content"
 			android:layout_width="fill_parent"	/>	
 	
@@ -83,7 +80,7 @@ android:layout_height="wrap_content"
 <EditText android:id="@+id/editxtRewardDescrVal"
 			android:textColor="#000"
 			android:textSize="10pt"
-			android:layout_span="3"
+			android:layout_span="2"
 			android:layout_height="wrap_content"
 			android:layout_width="fill_parent"	/>	
 </TableRow>
@@ -107,7 +104,7 @@ android:layout_height="wrap_content"
 <EditText android:id="@+id/txviewRewardPointsVal"
 			android:textColor="#000"
 			android:textSize="10pt"
-			android:layout_span="3"
+			android:layout_span="2"
 			android:layout_height="wrap_content"
 			android:layout_width="fill_parent"	/>	
 </TableRow>
@@ -129,15 +126,20 @@ android:layout_height="wrap_content"
    <Button
     android:id="@+id/Button_Update_Reward"
     android:layout_column="0"
+    android:layout_span="2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
     android:layout_alignParentBottom="true"
     android:text="Update"></Button>
-    
+    </TableRow>
+    <TableRow
+	android:layout_width="wrap_content" 
+	android:layout_height="wrap_content">
     
    <Button
     android:id="@+id/Button_Delete_Reward"
+    android:layout_span="2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentRight="true"
