--- a/AndroidApp/choresMonger/res/layout/reward_management.xml
+++ b/AndroidApp/choresMonger/res/layout/reward_management.xml
@@ -40,7 +40,10 @@
     android:layout_height="wrap_content"
     android:layout_alignParentTop="true"
     android:text="Create New Reward"/>
-
+<TextView 
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:background="#FFF"/>
    <RelativeLayout
         android:layout_height="wrap_content"
         android:layout_width="wrap_content">
