--- a/AndroidApp/choresMonger/res/layout/create_new_reward.xml
+++ b/AndroidApp/choresMonger/res/layout/create_new_reward.xml
@@ -1,35 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="fill_parent"
-  android:layout_height="fill_parent">
-
-<TableLayout 
+<ScrollView
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="fill_parent"
+android:layout_height="fill_parent"
+  android:background="#4062F7">
+ 
+ <TableLayout
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content"
-	android:stretchColumns="*">
-	
-	<TableRow
-	android:layout_width="fill_parent" 
-	android:layout_height="wrap_content">
-	
-	<ImageView
-		android:layout_width="wrap_content" 
-		android:layout_height="wrap_content"
-		android:layout_alignParentLeft="true"
-		android:layout_alignParentTop="true"
-		android:src="@drawable/choresmonger">
-	</ImageView>
-	
-</TableRow>
-
-	<TableRow
-	android:layout_width="fill_parent" 
-	android:layout_height="wrap_content">
-
+	android:stretchColumns="0">
+<TableRow 
+	android:layout_width="wrap_content" 
+	android:layout_height="wrap_content"
+	android:background="#000">
 <TextView 
 		android:layout_height="wrap_content" 
-		android:text="Create Reward"
+		android:text="Create Reward" 
 		android:textSize="@dimen/menu_title" 
 		android:shadowDx="0" 
 		android:shadowDy="0" 
@@ -37,9 +23,17 @@
 		android:layout_width="wrap_content"
 		android:layout_gravity="fill_horizontal|center" 
 		android:layout_alignParentTop="true" 
-		android:layout_centerHorizontal="true" 
+		android:layout_centerHorizontal="true"
 		android:shadowColor="@color/menu_glow" 
 		android:textColor="@color/menu_header"/>
+
+	 <ImageView
+	android:layout_width="wrap_content" 
+	android:layout_height="wrap_content"
+	android:src="@drawable/choresmonger"
+	android:layout_alignParentLeft="true"
+    android:layout_alignParentTop="true">
+	</ImageView>
 
 </TableRow>
 
@@ -48,7 +42,7 @@
 	android:layout_height="wrap_content">
 	
 <TextView
-			android:textColor="#000"
+			android:textColor="#FFF"
 			android:text="Title:"
 			android:textSize="10pt"
 			android:layout_height="wrap_content"
@@ -58,20 +52,21 @@
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">
 	
-<EditText android:id="@+id/txviewRewardTitleVal"
+<EditText android:id="@+id/editTxtCreateRewardTitleVal"
 			android:textColor="#000"
 			android:textSize="10pt"
+			android:layout_span="2"
 			android:layout_height="wrap_content"
-			android:layout_width="wrap_content"	/>	
+			android:layout_width="fill_parent"	/>	
 	
 </TableRow>
 
-	<TableRow
+	<TableRow 
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">
 	
-<TextView
-			android:textColor="#000"
+<TextView 
+			android:textColor="#FFF"
 			android:text="Description:"
 			android:textSize="10pt"
 			android:layout_height="wrap_content"
@@ -82,62 +77,62 @@
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">	
 	
-<EditText android:id="@+id/editxtRewardDescrVal"
+<EditText android:id="@+id/editxtCreateRewardDescrVal"
 			android:textColor="#000"
 			android:textSize="10pt"
+			android:layout_span="2"
 			android:layout_height="wrap_content"
-			android:layout_width="wrap_content"	/>	
+			android:layout_width="fill_parent"	/>	
 </TableRow>
   
-  <TableRow
+  <TableRow 
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">
 	
-<TextView
-			android:textColor="#000"
+<TextView 
+			android:textColor="#FFF"
 			android:text="Points:"
 			android:textSize="10pt"
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"	/>	
 
 </TableRow>
-
 <TableRow
-	android:layout_width="fill_parent" 
+	android:layout_width="fill_parent"
 	android:layout_height="wrap_content">
 
-<EditText android:id="@+id/txviewRewardPointsVal"
+<EditText android:id="@+id/txviewCreateRewardPointsVal"
 			android:textColor="#000"
 			android:textSize="10pt"
+			android:layout_span="2"
 			android:layout_height="wrap_content"
-			android:layout_width="wrap_content"	/>	
+			android:layout_width="fill_parent"	/>	
 </TableRow>
-   
-   <TableRow
+      <TableRow
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">
-	 
-	 <CheckBox android:id="@+id/checkbox1"
+	
+		 <CheckBox android:id="@+id/checkboxCreateRewardIsOneTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="One Time Reward" />
-        </TableRow>
-           <TableRow 
+	
+	</TableRow>
+   
+   <TableRow
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content">
+	
    <Button
-    android:id="@+id/Button_Create_New_Reward"
+    android:id="@+id/Button_Create_Reward"
+    android:layout_column="0"
+    android:layout_span="2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Create"></Button>
-    
-    <Button
-    android:id="@+id/Button_Cancel_Create_Reward"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Cancel"></Button>
-        
-   </TableRow>
- </TableLayout>
-</LinearLayout>
-  
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentBottom="true"
+    android:text="Create New Reward"></Button>
+    </TableRow>
+
+</TableLayout>
+</ScrollView>  
