--- a/AndroidApp/choresMonger/res/layout/edit_reward.xml
+++ b/AndroidApp/choresMonger/res/layout/edit_reward.xml
@@ -89,7 +89,7 @@ android:layout_height="fill_parent"
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content">
 	
-<TextView android:id="@+id/txviewRewardPoints"
+<TextView
 			android:textColor="#FFF"
 			android:text="Points:"
 			android:textSize="10pt"
@@ -104,6 +104,7 @@ android:layout_height="fill_parent"
 <EditText android:id="@+id/txviewRewardPointsVal"
 			android:textColor="#000"
 			android:textSize="10pt"
+			android:inputType="numberDecimal"
 			android:layout_span="2"
 			android:layout_height="wrap_content"
 			android:layout_width="fill_parent"	/>	
