--- a/AndroidApp/choresMonger/res/layout/reward_history.xml
+++ b/AndroidApp/choresMonger/res/layout/reward_history.xml
@@ -38,7 +38,13 @@
    <RelativeLayout
         android:layout_height="wrap_content"
         android:layout_width="wrap_content">
-        
+        <TextView
+        	android:id="@+id/txviewRewadrHistory"
+        	android:layout_width="fill_parent"
+        	android:layout_height="wrap_content"
+        	android:textSize="8pt"
+        	android:textColor="#FFF"
+        	/>
 		<ListView
 		android:id="@+id/ListView_reward_history"
 		android:layout_width="fill_parent"
