--- a/AndroidApp/choresMonger/res/layout/reward_management.xml
+++ b/AndroidApp/choresMonger/res/layout/reward_management.xml
@@ -47,7 +47,13 @@
    <RelativeLayout
         android:layout_height="wrap_content"
         android:layout_width="wrap_content">
-
+         <TextView
+        	android:id="@+id/txviewRewardsManagement"
+        	android:layout_width="fill_parent"
+        	android:layout_height="wrap_content"
+        	android:textSize="8pt"
+        	android:textColor="#FFF"
+        	/>
     
     <ListView
 		android:id="@+id/ListView_My_RewardsManagement_Menu"
